# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2023-03-16 Michael Truog   <mjtruog at protonmail dot com>

    * Change the OCaml use of num-1.1 to zarith-1.12 for big-integer support
      in the Erlang External Term Format
    * Update erlang_ml
    * Update erlang_py

2023-03-14 Michael Truog   <mjtruog at protonmail dot com>

    * Update erlang_go

2023-03-03 Michael Truog   <mjtruog at protonmail dot com>

    * Change the C++ CloudI API backtrace dependency order selection
      to binutils, libdw, libdwarf
      (libdwarf functionality needs verification for libdwarf
       versions >= 20210528 that includes checking whether it
       provides more information)
    * Add to ATS CloudI API function effect tags comment

2023-02-21 Michael Truog   <mjtruog at protonmail dot com>

    * Add bind service configuration option string value for providing
      the exact logical processors of the bind

2023-02-17 Michael Truog   <mjtruog at protonmail dot com>

    * Add Java, JavaScript, OCaml, Perl, PHP, Python, Python/C, Ruby
      CloudI API functions for service process constant value access
      before CloudI API initialization:
        * timeout_initialize
        * timeout_terminate
        * process_index
        * process_count_max
        * process_count_min

2023-02-16 Michael Truog   <mjtruog at protonmail dot com>

    * Add ATS, Go, Haskell CloudI API functions for service process
      constant value access before CloudI API initialization:
        * timeout_initialize
        * timeout_terminate
        * process_index
        * process_count_max
        * process_count_min

2023-02-15 Michael Truog   <mjtruog at protonmail dot com>

    * Add C/C++ CloudI API functions for service process constant value
      access before CloudI API initialization:
        * timeout_initialize
        * timeout_terminate
        * process_index
        * process_count_max
        * process_count_min